--- a/src/data/config.yaml
+++ b/src/data/config.yaml
@@ -1,16 +1,16 @@
 logo:
   logo_text: "Advance"
-  logo_image_desktop: /images/logo/logo.svg
+  logo_image_desktop: /images/logo/logo_text.svg
   logo_image_mobile: /images/logo/logo-mobile.svg
-  logo_image_desktop_invert: /images/logo/logo-invert.svg # used on transparent header and when in dark mode. Normally a white version of the logo.
+  logo_image_desktop_invert: /images/logo/logo_text_neg.svg # used on transparent header and when in dark mode. Normally a white version of the logo.
   logo_image_mobile_invert: /images/logo/logo-invert-mobile.svg # used on transparent header and when in dark mode. Normally a white version of the logo.
-  logo_image_desktop_height: "34px"
-  logo_image_desktop_width: "34px"
-  logo_image_mobile_height: "34px"
-  logo_image_mobile_width: "34px"
+  logo_image_desktop_height: "55px"
+  logo_image_desktop_width: "200px"
+  logo_image_mobile_height: "55px"
+  logo_image_mobile_width: "200px"
   show_logo_image_on_mobile: true
   show_logo_image_on_desktop: true
   show_logo_text_on_mobile: false
   show_logo_text_on_desktop: true
-  logo_text_font_size: "24px"
+  logo_text_font_size: "45px"
   logo_text_font_weight: "500" # 300, 500, 700
