--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          provenance: false
           tags: registry.gitlab.uni-bonn.de:5050/rpl/containers/website:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
