--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,8 +25,10 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
-          provenance: false
+          provenance: mode=max
+          sbom: true
           tags: registry.gitlab.uni-bonn.de:5050/rpl/containers/website:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
