--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,11 +23,10 @@ jobs:
           password: ${{ secrets.BONN_GITLAB_PASSWORD }}
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: true
-          provenance: mode=max
-          sbom: true
+          provenance: false
           tags: registry.gitlab.uni-bonn.de:5050/rpl/containers/website:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
