--- a/nginx.conf
+++ b/nginx.conf
@@ -41,7 +41,7 @@ http {
         listen                             80;
         listen                             [::]:80;
         server_name                        rpl.uni-bonn.de;
-        root                               /var/www/rpl.uni-bonn.de/public;
+        root                               /usr/share/nginx/html;
 
         # security headers
         add_header X-XSS-Protection        "1; mode=block" always;
