announce best paper award

--- a/src/content/news.yaml
+++ b/src/content/news.yaml
@@ -6,3 +6,5 @@
   message: Our lab officially kicks off as Hermann Blum starts his position at Uni Bonn and Lamarr. And we are looking for members!
   button_1_text: apply now
   button_1_link: /opportunities
+- date: 2024-05-13
+  message: Oliver Lemke wins the Best Paper Award 🏆 at the ICRA Mobile Manipulation workshop for spot-compose.
