--- a/.pages.yml
+++ b/.pages.yml
@@ -1,3 +1,21 @@
 media:
   input: src/images
   output: /
+content:
+  - name: projects
+    label: Projects
+    path: src/content/student_projects
+    type: collection
+    view:
+      fields: [ title ]
+      primary: title
+      sort: [ title ]
+    fields:
+      - name: title
+        label: Title
+        type: text
+      - name: type
+        label: Type
+        type: select
+        options:
+          values: [ "master thesis", "bachelor thesis", "lab" ]
