--- a/.pages.yml
+++ b/.pages.yml
@@ -17,3 +17,7 @@ content:
       - name: type
         label: Type
         type: string
+      - name: image
+        label: Image
+        type: image
+        path: projects/
