--- a/.pages.yml
+++ b/.pages.yml
@@ -27,8 +27,4 @@ content:
     label: News
     path: src/content/news.yaml
     type: file
-    format: yaml
-    fields:
-      - name: message
-        label: Message
-        type: rich-text
+    format: raw
