--- a/src/content/news.yaml
+++ b/src/content/news.yaml
@@ -8,3 +8,5 @@
   button_1_link: /opportunities
 - date: 2024-05-13
   message: Oliver Lemke wins the Best Paper Award 🏆 at the ICRA Mobile Manipulation workshop for spot-compose.
+- date: 2024-07-01
+  message: 1 paper accepted to IROS 2024 and 2 papers accepted to ECCV 2024
