--- a/.pages.yml
+++ b/.pages.yml
@@ -27,6 +27,27 @@ content:
       - name: body
         label: Description
         type: rich-text
+  - name: lectures
+    label: Lectures
+    path: src/content/lectures
+    type: collection
+    view:
+      fields: [ title ]
+      primary: title
+      sort: [ title ]
+    fields:
+      - name: title
+        label: Title
+        type: string
+      - name: lecture
+        label: Lecture Key
+        type: string
+      - name: summary
+        label: Summary
+        type: string
+      - name: body
+        label: Description
+        type: rich-text
   - name: news
     label: News
     path: src/content/news.yaml
