Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -7,9 +7,9 @@ content:
     path: src/content/student_projects
     type: collection
     view:
-      fields: [ title ]
+      fields: [ visible, title ]
       primary: title
-      sort: [ title ]
+      sort: [ visible, title ]
     fields:
       - name: title
         label: Title
