Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -27,6 +27,8 @@ content:
       - name: body
         label: Description
         type: code
+        options:
+          language: markdown
   - name: lectures
     label: Lectures
     path: src/content/lectures
