--- a/.pages.yml
+++ b/.pages.yml
@@ -50,6 +50,8 @@ content:
       - name: body
         label: Description
         type: code
+        options:
+          language: markdown
   - name: news
     label: News
     path: src/content/news.yaml
