added myself to the yaml

--- a/src/content/team.yaml
+++ b/src/content/team.yaml
@@ -3,3 +3,9 @@
   image: hermann.jpg
   website: https://hermannblum.net/
   email: blumh@uni-bonn.de
+
+- name: Sami Azirar
+  jobtitle: PhD Student
+  image: sami.jpeg
+  website: https://github.com/sazirarrwth99
+  email: sazirar@uni-bonn.de
