--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Login to GitLab Registry
         uses: docker/login-action@v1
         with:
-          registry: registry.gitlab.uni-bonn.de:5050
+          registry: registry.gitlab.uni-bonn.de
           username: ${{ secrets.BONN_GITLAB_USERNAME }}
           password: ${{ secrets.BONN_GITLAB_PASSWORD }}
       - name: Build and push
