--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,6 @@ jobs:
         with:
           push: true
           provenance: false
-          tags: registry.gitlab.uni-bonn.de:5050/rpl/containers/website:latest
+          tags: registry.gitlab.uni-bonn.de/rpl/containers/website:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
