--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Login to GitLab Registry
         uses: docker/login-action@v1
         with:
-          registry: registry.gitlab.uni-bonn.de
+          registry: registry.gitlab.uni-bonn.de:5050
           username: ${{ secrets.BONN_GITLAB_USERNAME }}
           password: ${{ secrets.BONN_GITLAB_PASSWORD }}
       - name: Build and push
@@ -27,6 +27,6 @@ jobs:
         with:
           push: true
           provenance: false
-          tags: registry.gitlab.uni-bonn.de/rpl/containers/website:latest
+          tags: registry.gitlab.uni-bonn.de:5050/rpl/containers/website:latest
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
