Update src/content/news.yaml (via Pages CMS)

--- a/src/content/news.yaml
+++ b/src/content/news.yaml
@@ -14,3 +14,5 @@
   message: We are co-organizing the Open-World Robust Recognition at BMVC 2024 today.
   button_1_text: workshop website
   button_1_link: https://rrow2024.github.io
+- date: 2025-02-26
+  message: 1 paper accepted to RA-L and 3 papers accepted to CVPR 2025
