--- a/src/content/team.yaml
+++ b/src/content/team.yaml
@@ -6,6 +6,6 @@
 
 - name: Sami Azirar
   jobtitle: PhD Student
-  image: sami.jpeg
+  image: sami.jpg
   website: https://github.com/sazirarrwth99
   email: sazirar@uni-bonn.de
