--- a/.pages.yml
+++ b/.pages.yml
@@ -62,3 +62,7 @@ content:
     path: src/content/team.yaml
     type: file
     format: raw
+  - name: opportunities
+    label: Opportunitues
+    path: src/content/opportunities.md
+    type: file
