Update src/content/team.yaml (via Pages CMS)

--- a/src/content/team.yaml
+++ b/src/content/team.yaml
@@ -9,3 +9,7 @@
   image: sami.jpg
   website: https://github.com/sazirarrwth99
   email: sazirar@uni-bonn.de
+
+- name: Gülhan Sikaroglu
+  jobtitle: PhD Student
+  email: sikaroglu@cs.uni-bonn.de
