Update src/content/team.yaml (via Pages CMS)

--- a/src/content/team.yaml
+++ b/src/content/team.yaml
@@ -12,4 +12,5 @@
 
 - name: Gülhan Sikaroglu
   jobtitle: PhD Student
+  website: https://www.linkedin.com/in/gulhan-sikaroglu/
   email: sikaroglu@cs.uni-bonn.de
