Update src/content/team.yaml (via Pages CMS)

--- a/src/content/team.yaml
+++ b/src/content/team.yaml
@@ -7,7 +7,7 @@
 - name: Sami Azirar
   jobtitle: PhD Student
   image: sami.jpg
-  website: https://github.com/sazirarrwth99
+  website: https://samiazirar.github.io
   email: sazirar@uni-bonn.de
 
 - name: Gülhan Sikaroglu
