--- a/src/content/team.yaml
+++ b/src/content/team.yaml
@@ -13,4 +13,4 @@
 - name: Gülhan Sikaroglu
   jobtitle: PhD Student
   website: https://www.linkedin.com/in/gulhan-sikaroglu/
-  email: sikaroglu@cs.uni-bonn.de
+  email: guelhan.sikaroglu@rpl.uni-bonn.de
