Update src/content/team.yaml (via Pages CMS)

--- a/src/content/team.yaml
+++ b/src/content/team.yaml
@@ -12,5 +12,6 @@
 
 - name: Gülhan Sikaroglu
   jobtitle: PhD Student
+  image: gulhan.jpg
   website: https://www.linkedin.com/in/gulhan-sikaroglu/
   email: guelhan.sikaroglu@rpl.uni-bonn.de
