Update src/content/news.yaml (via Pages CMS)

--- a/src/content/news.yaml
+++ b/src/content/news.yaml
@@ -23,8 +23,8 @@
   button_2_text: IROS Active Perception WS
   button_2_link: https://activep-ws.github.io/
 - date: 2025-06-25
-  message: 1 paper accepted to ICCV 2025 and 3 papers accepted at IROS 2025
-- date: 2025-06-21
+  message: In total 6 papers accepted to ICCV, IROS, Humanoids, and CoRL!
+- date: 2025-08-07
   message: Hermann Blum gives an invited talk at the RSS Visual Slam Workshop
   button_1_text: Talk Recording
   button_1_link: https://youtu.be/RmJ0fikJQKk
