Update src/content/news.yaml (via Pages CMS)

--- a/src/content/news.yaml
+++ b/src/content/news.yaml
@@ -28,3 +28,7 @@
   message: Hermann Blum gives an invited talk at the RSS Visual Slam Workshop
   button_1_text: Talk Recording
   button_1_link: https://youtu.be/RmJ0fikJQKk
+- date: 2025-09-26
+  message: As part of the night of technology, we demo scene-graph based object search and spatial reasoning with our robots. 
+  button_1_text: Night of Technology
+  button_1_link: https://nacht-der-technik.de/bonn-rhein-sieg/programm/rheinische-friedrich-wilhelms-universitaet-bonn/
