Update src/content/news.yaml (via Pages CMS)

--- a/src/content/news.yaml
+++ b/src/content/news.yaml
@@ -32,3 +32,5 @@
   message: As part of the night of technology, we demo scene-graph based object search and spatial reasoning with our robots. 
   button_1_text: Night of Technology
   button_1_link: https://nacht-der-technik.de/bonn-rhein-sieg/programm/rheinische-friedrich-wilhelms-universitaet-bonn/
+- date: 2025-10-21
+  message: Rohit Menon wins the Best Poster Award 🏆 at the IROS Mobile Manipulation workshop.
