Update src/content/news.yaml (via Pages CMS)

--- a/src/content/news.yaml
+++ b/src/content/news.yaml
@@ -34,3 +34,5 @@
   button_1_link: https://nacht-der-technik.de/bonn-rhein-sieg/programm/rheinische-friedrich-wilhelms-universitaet-bonn/
 - date: 2025-10-21
   message: Rohit Menon wins the Best Poster Award 🏆 at the IROS Mobile Manipulation workshop.
+  button_1_text: Paper
+  button_1_link: https://autonomousrobots.nl/assets/images/workshops/2025_iros/accepted_papers/paper_8_Open.pdf
