Update src/content/team.yaml (via Pages CMS)

--- a/src/content/team.yaml
+++ b/src/content/team.yaml
@@ -4,6 +4,10 @@
   website: https://hermannblum.net/
   email: blumh@uni-bonn.de
 
+- name: Simone Schlauf
+  jobtitle: Operations
+  email: schlauf@iai.uni-bonn.de
+
 - name: Sami Azirar
   jobtitle: PhD Student
   image: sami.jpg
