Update src/content/news.yaml (via Pages CMS)

--- a/src/content/news.yaml
+++ b/src/content/news.yaml
@@ -37,6 +37,6 @@
   button_1_text: Paper
   button_1_link: https://autonomousrobots.nl/assets/images/workshops/2025_iros/accepted_papers/paper_8_Open.pdf
 - date: 2026-06-01
-  message: We are organizing a Workshop at ICRA 2026 on Uncertainty in Open-World Robotics
+  message: We are co-organizing a Workshop at ICRA 2026 on Uncertainty in Open-World Robotics
   button_1_text: Workshop Website
   button_1_link: https://uncertainty-in-robotics.github.io/
