ssl course tempelate+ team meber added

--- a/src/content/team.yaml
+++ b/src/content/team.yaml
@@ -19,3 +19,8 @@
   image: gulhan.jpg
   website: https://www.linkedin.com/in/gulhan-sikaroglu/
   email: guelhan.sikaroglu@rpl.uni-bonn.de
+
+- name: Rafay Mohiuddin
+  jobtitle: PhD Student
+  website: https://rafaymhddn.github.io
+  email: rmohiudd@uni-bonn.de
